# rust_api

./: .env  Cargo.toml  README.md
migrations/2024-05-24-080816_posts/: up.sql
migrations/2024-05-28-043150_posts/: up.sql
src/: main.rs  models.rs  schema.rs
