[package]
name = "simple_rest_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
tokio = { version = "1.0", features = ["full"] }